draw colored graph

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,11 @@ psycopg2~=2.9.3
 django~=4.0.1
 djangorestframework~=3.13.1
 requests~=2.27.1
+numpy
+matplotlib
+pandas
+networkx
+pygraphviz
+graphviz
 ipython
 ipdb
