--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Pull Requests Integration Process Optimization: An Empirical Study
+# title: Pull Requests Integration Process Optimization: An Empirical Study
 description: Online Appendix
